--- a/NSPRecv/NSPRecv/SettingsPage.xaml
+++ b/NSPRecv/NSPRecv/SettingsPage.xaml
@@ -5,49 +5,43 @@
              BackgroundColor="LightGray"
              Title="NSP - Settings Page">
     <ContentPage.Content>
+        
         <StackLayout>
-            <StackLayout>
-                <Label Text="Initials:" FontSize="Small" HorizontalTextAlignment="Start"/>
-                <Entry x:Name="Initials" Placeholder="Enter Initials(;)"/>
-                <Label Text="To(s):" FontSize="Small" HorizontalTextAlignment="Start"/>
-                <Entry x:Name="Tos" Placeholder="Enter To: emails (;)"/>
-                <Label Text="From:" FontSize="Small" HorizontalTextAlignment="Start"/>
-                <Entry x:Name="From" Placeholder="Enter From: email"/>
-                <Label Text="Host:" FontSize="Small" HorizontalTextAlignment="Start"/>
-                <Entry x:Name="Host" Placeholder="smtp.hostname.com"/>
-                <Label Text="Pwd:" FontSize="Small" HorizontalTextAlignment="Start"/>
-                <Entry x:Name="Pwd" Placeholder="Password for From: email"/>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <Label Text="Port:" 
-                           Grid.Row="0" Grid.Column="0"
-                           FontSize="Small" HorizontalTextAlignment="Start"/>
-                    <Entry x:Name="Port" 
-                            Grid.Row="0" Grid.Column="0"
-                           Placeholder="Enter Initials(;)"/>
-
-                    <Label Text="TLS/SSL:" 
-                           Grid.Row="0" Grid.Column="1"
-                           FontSize="Small" HorizontalTextAlignment="Start"/>
-                    <Switch x:Name="TLS"
-                            Grid.Row="0" Grid.Column="1"
-                            IsToggled="True" HorizontalOptions="Center"/>
-                </Grid>
-            </StackLayout>
-            <StackLayout>
+            <ScrollView>
+                <StackLayout Padding="10,0,0,10">
+                    <Label Text="Initials:" FontSize="Small" HorizontalTextAlignment="Start"/>
+                    <Entry x:Name="Initials" Placeholder="Enter Initials(,)"/>
+                    <Label Text="From:" FontSize="Small" HorizontalTextAlignment="Start"/>
+                    <Entry x:Name="From" Placeholder="Enter From: email"/>
+                    <Label Text="To(s):" FontSize="Small" HorizontalTextAlignment="Start"/>
+                    <Entry x:Name="Tos" Placeholder="Enter To: emails (,)"/>
+                    <Label Text="Cc:" FontSize="Small" HorizontalTextAlignment="Start"/>
+                    <Entry x:Name="Ccopy" Placeholder="Enter Cc: email"/>
+                    <Label Text="Host:" FontSize="Small" HorizontalTextAlignment="Start"/>
+                    <Entry x:Name="Host" Placeholder="smtp.hostname.com"/>
+                    <Label Text="Pwd:" FontSize="Small" HorizontalTextAlignment="Start"/>
+                    <Entry x:Name="Pwd" Placeholder="Password for From: email"/>
+                    <Label Text="Port:" FontSize="Small" HorizontalTextAlignment="Start"/>
+                    <Entry x:Name="Port" Placeholder="SMTP Port"/>
+                    <Label Text="TLS:" FontSize="Small" HorizontalTextAlignment="Start"/>
+                    <Switch x:Name="TLS" IsToggled="True" HorizontalOptions="Start"/>
+                </StackLayout>
+            </ScrollView>
+            <StackLayout Orientation="Horizontal" Margin="0,0,0,10">
                 <Button x:Name="btnSavePrefs"
-                        BackgroundColor="Green" FontSize="Large" FontAttributes="Bold"
-                        Text="SAVE"
-                        Margin="10,10,10,0"
-                        Clicked="Save_Clicked"/>
+                    BackgroundColor="Green" FontSize="Large" FontAttributes="Bold"
+                    HorizontalOptions="FillAndExpand"
+                    Text="SAVE"
+                    Margin="10,10,10,0"
+                    Clicked="Save_Clicked"/>
+                <Button x:Name="btnClearPrefs"
+                    BackgroundColor="Red" FontSize="Large" FontAttributes="Bold"
+                    HorizontalOptions="FillAndExpand"
+                    Text="CLEAR"
+                    Margin="10,10,10,0"
+                    Clicked="Clear_Clicked"/>
             </StackLayout>
         </StackLayout>
+        
     </ContentPage.Content>
 </ContentPage>
