--- a/NSPRecv/NSPRecv/MainPage.xaml
+++ b/NSPRecv/NSPRecv/MainPage.xaml
@@ -10,6 +10,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="2*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -24,24 +25,29 @@
                 Text="SEND"
                 Margin="10,10,10,0"
                 Clicked="Send_Clicked"/>
-        
+
         <Editor x:Name="Tags" 
                 Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                 BackgroundColor="White" TextColor="Black" FontSize="Large"
                 Margin="10,10,10,0"
                 Placeholder="Scan Tags Here"/>
 
+        <Label x:Name="Msg" 
+                Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+                Margin="10,0,0,0"
+                FontSize="Micro" TextColor="Red"/>
+        
         <Button x:Name="Clear" 
-                Grid.Row="2" Grid.Column="0" 
+                Grid.Row="3" Grid.Column="0" 
                 BackgroundColor="Red" FontSize="Large" FontAttributes="Bold"
-                Margin="10,10,20,10"
+                Margin="10,0,20,10"
                 Text="CLEAR"
                 Clicked="Clear_Clicked"/>
 
         <Button x:Name="Settings" 
-                Grid.Row="2" Grid.Column="1" 
+                Grid.Row="3" Grid.Column="1" 
                 BackgroundColor="Gray" FontSize="Large" FontAttributes="Bold"
-                Margin="20,10,10,10"
+                Margin="20,0,10,10"
                 Text="SETTINGS"
                 Clicked="Settings_Clicked"/>
     </Grid>
