--- a/NSPRecv/NSPRecv/ConfPage.xaml
+++ b/NSPRecv/NSPRecv/ConfPage.xaml
@@ -21,7 +21,7 @@
         
         <Label x:Name="Conf"
                Grid.Row="1" Grid.Column="0"
-               TextColor="Black" FontSize="36" FontAttributes="Bold"
+               TextColor="Black" FontSize="Large" FontAttributes="Bold"
                HorizontalTextAlignment="Center"
                VerticalTextAlignment="Start"/>
 
