--- a/NSPRecv/NSPRecv/MainPage.xaml
+++ b/NSPRecv/NSPRecv/MainPage.xaml
@@ -8,44 +8,73 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/> <!--Send-->
+            <RowDefinition Height="2*"/> <!--Scan text-->
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/> <!--Msg text-->
+            <RowDefinition Height="Auto"/> <!--Buttons-->
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         
         <Button x:Name="Send" 
-                Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" 
+                Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" 
                 BackgroundColor="Green" FontSize="Large" FontAttributes="Bold"
                 Text="SEND"
                 Margin="10,10,10,0"
                 Clicked="Send_Clicked"/>
 
         <Editor x:Name="Tags" 
-                Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4"
                 BackgroundColor="White" TextColor="Black" FontSize="Large"
                 Margin="10,10,10,0"
                 Placeholder="Scan Tags Here"/>
 
+        <Picker x:Name="pckInits"
+                Margin="10,0,0,0"
+                Grid.Row="2" Grid.Column="0" Title="Initials:"
+                BackgroundColor="White" TextColor="Black" FontSize="Large"/>
+
+        <Picker x:Name="pckQty"
+                Grid.Row="2" Grid.Column="1" Title="Qty:"
+                BackgroundColor="White" TextColor="Black" FontSize="Large">
+                <Picker.Items>
+                <x:String>1</x:String>
+                <x:String>2</x:String>
+                <x:String>3</x:String>
+                <x:String>4</x:String>
+                <x:String>5</x:String>
+                <x:String>6</x:String>
+                <x:String>7</x:String>
+                <x:String>8</x:String>  
+                </Picker.Items>
+        </Picker>
+
+        <Entry x:Name="Ven"
+               Margin="0,0,10,0"
+               BackgroundColor="White" TextColor="Black" 
+               Placeholder="Vehicle ID" FontSize="Large"
+               Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2"/>
+
         <Label x:Name="Msg" 
-                Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+                Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4"
                 Margin="10,0,0,0"
                 FontSize="Micro" TextColor="Red"/>
         
         <Button x:Name="Clear" 
-                Grid.Row="3" Grid.Column="0" 
+                Grid.Row="4" Grid.Column="0"  Grid.ColumnSpan="2"
                 BackgroundColor="Red" FontSize="Large" FontAttributes="Bold"
                 Margin="10,0,20,10"
                 Text="CLEAR"
                 Clicked="Clear_Clicked"/>
 
         <Button x:Name="Settings" 
-                Grid.Row="3" Grid.Column="1" 
+                Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" 
                 BackgroundColor="Gray" FontSize="Large" FontAttributes="Bold"
                 Margin="20,0,10,10"
                 Text="SETTINGS"
